# QuickSky

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
c_build/: CMakeCache.txt  Makefile  cmake_install.cmake
c_src/: sys.h
c_src/linux/: sys_linux.c
c_src/macos/: sys_macos.c
c_src/windows/: sys_win.c
src/: main.rs
src/ffi/: sys.rs
src/ignore/: mod.rs
src/remote/: mod.rs
src/repo/: change.rs  commit.rs  config.rs
